fix: fix z-index in calling window

--- a/front-end/src/components/common/RingingPhone/RingingPhone.module.scss
+++ b/front-end/src/components/common/RingingPhone/RingingPhone.module.scss
@@ -8,7 +8,7 @@
   bottom: 20px;
   max-width: 250px;
   border-radius: 5px;
-  z-index: 9;
+  z-index: 9999;
   background-color: #fff;
   box-shadow: 0 14px 24px rgb(0 0 0 / 20%);
 
